# supplement

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: README.md  derive.rs  derive_clap3.rs  install.sh
examples/shell/: qit.fish
src/: abstraction.rs  arg_context.rs  completion.rs  error.rs  gen_prelude.rs  history.rs  id.rs  info.rs  lib.rs  main.rs  parsed_flag.rs  seen.rs  supplement.rs  utils.rs
src/core/: flag.rs  mod.rs
src/generate/: abstraction.rs  config.rs  gen_default_impl.rs  mod.rs  setting.rs  utils.rs
supplement-example/: Cargo.toml  README.md  build.rs  install.sh
supplement-example/shell/: qit.bash  qit.fish  qit.zsh
supplement-example/src/: args.rs  lib.rs  main.rs
supplement-proc-macro/: Cargo.toml
supplement-proc-macro/src/: derive_supplement.rs  id_codegen.rs  id_derived.rs  lib.rs
supplement-proc-macro/src/derive_supplement/: acc_func.rs  ctx_func.rs  mod.rs
supplement-proc-macro/tests/: test.rs
supplement-tests/: .gitignore  Cargo.toml  build.rs
supplement-tests/src/: args.rs  args_simple.rs  conflict_name.rs  def.rs  dummy.rs  generate.rs  lib.rs  main.rs  my_gen.rs
supplements/: Cargo.toml
supplements-example/: Cargo.toml  README.md  build.rs  install.sh
supplements-example/shell/: qit.fish
supplements-example/src/: args.rs  args_clap3.rs  main.rs
supplements-tests/: Cargo.toml  build.rs
supplements-tests/src/: args.rs  dummy.rs  lib.rs
supplements/src/: arg_context.rs  error.rs  history.rs  lib.rs  parsed_flag.rs  utils.rs
supplements/src/generate/: abstraction.rs  mod.rs  utils.rs
supplements/tests/: integration.rs
tests/: derive.rs  integration.rs
