[workspace]
resolver = "3"
members = ["supplement-example", "supplement-proc-macro", "supplement-tests"]

[package]
name = "supplement"
version = "0.1.6"
authors = ["why8ther <lturtsamuel@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]
description = "The awesome supplement for your awesome CLI app"
repository = "https://github.com/david0u0/supplement"

[dependencies]
log = { version = "0.4.18", default-features = false }
clap3 = { package = "clap", version = "3", optional = true }
clap4 = { package = "clap", version = "4", optional = true }
supplement-proc-macro = { path = "./supplement-proc-macro", version = "0.1" }

[dev-dependencies]
env_logger = '0.11'

[features]
default = ["clap-4"]
clap-3 = ["clap3"]
clap-4 = ["clap4"]
