[package]
name = "supplements"
version = "0.1.0"
authors = ["why8ther <lturtsamuel@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]
description = "The awesome supplement for your awesome CLI app"

[dependencies]
log = '*'
clap3 = { package = "clap", version = "3", optional = true }
clap4 = { package = "clap", version = "4", optional = true }

[dev-dependencies]
env_logger = '*'

[features]
default = ["clap-4"]
clap-3 = ["clap3"]
clap-4 = ["clap4"]
